--- a/src/components/Piano.css
+++ b/src/components/Piano.css
@@ -2,23 +2,31 @@
   display: flex;
   justify-content: center;
 }
-
 .white-key {
-  border: 1px solid #000;
-  width: 100px;
-  height: 400px;
+  border: 2px solid #000;
+  width: 80px;
+  height: 450px;
   background: #fff;
 }
-
+.rounded-left {
+  border-radius: 1.5rem 0 0 1.5rem;
+}
+.rounded-right {
+  border-radius: 0 1.5rem 1.5rem 0;
+}
 .black-key {
   background-color: #000;
-  width: 60px;
-  height: 250px;
-  margin-left: -30px;
-  margin-right: -30px;
+  width: 48px;
+  height: 300px;
+  margin-left: -24px;
+  margin-right: -24px;
   z-index: 1;
+  border: 1px solid #000;
 }
 
+.black-key.active {
+  background: #accede;
+}
 .active {
-  background: purple;
+  background: #e2c4ff;
 }
